--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.commons</groupId>
@@ -11,7 +9,7 @@
 
   <groupId>org.xwiki.contrib.listeneradmin</groupId>
   <artifactId>application-listener-admin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>Event Listeners Administration</name>
   <description>Provide script service and UI to register/list/unregister listeners</description>
   <properties>
@@ -34,7 +32,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/application-listener-admin.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/application-listener-admin.git</developerConnection>
     <url>https://github.com/xwiki-contrib/application-listener-admin/tree/master/</url>
-    <tag>HEAD</tag>
+    <tag>application-listener-admin-1.0</tag>
   </scm>
   <issueManagement>
     <system>jira</system>
