--- a/application-listener-admin-ui/pom.xml
+++ b/application-listener-admin-ui/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.xwiki.contrib.listeneradmin</groupId>
     <artifactId>application-listener-admin</artifactId>
-    <version>1.0.1</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>application-listener-admin-ui</artifactId>
   <name>Listener Administration - UI</name>
