--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.xwiki.contrib.listeneradmin</groupId>
   <artifactId>application-listener-admin</artifactId>
-  <version>1.0.1</version>
+  <version>1.1-SNAPSHOT</version>
   <name>Event Listeners Administration</name>
   <description>Provide script service and UI to register/list/unregister listeners</description>
   <properties>
@@ -32,7 +32,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/application-listener-admin.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/application-listener-admin.git</developerConnection>
     <url>https://github.com/xwiki-contrib/application-listener-admin/tree/master/</url>
-    <tag>application-listener-admin-1.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>jira</system>
